# Eng.Soft-Python

./: .gitignore  README.md  compose.yml  dockerfile  entrypoint.sh  pyproject.toml
alembic/: README  env.py
alembic/versions/: 458da8eff46e_initial_migration.py  6be0f421070d_initial_migration.py
src/: main.py
src/adapters/: adapter.py
src/adpters/: adapter.py
src/api/task/: controller.py  router.py  schemas.py
src/api/utils/: exceptions.py
src/commands/: commands.py
src/config/: config.py
src/database/: database.py
src/decorators/: decorators.py
src/factory/: tasks_factory.py
src/models/: task.py
src/queries/: queries.py
src/services/: notification_service.py  task_service.py
src/tests/: conftest.py
src/tests/e2e/: test_task_flow.py
src/tests/integration/: test_task_integration.py
src/tests/unit/: test_models.py  test_task.py
