[project]
name = "Estudo-Python"
version = "0.1.0"
description = "Estudos de conceitos de engenharia de software"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "fastapi>=0.115.8",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "pytest>=8.3.4",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.34.0",
]

[tool.pytest.ini_options]
pythonpath = ["./src"]
addopts = "-p no:warnings"
