[project]
name = "Estudo-Python"
version = "0.1.0"
description = "Estudos de conceitos de engenharia de software"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "blue>=0.3.0",
    "fastapi>=0.115.8",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.4",
    "sqlalchemy>=2.0.37",
    "task>=0.2.0",
    "taskipy>=1.14.1",
    "uvicorn>=0.34.0",
]

[tool.ruff]
line-length = 88
exclude = ['.venv', 'migrations']

[tool.isort]
profile = "black"
line_length = 88
extend_skip = ['migrations']

[tool.blue]
extend-exclude = '(alembic/)'
line_length = 88

[tool.pytest.ini_options]
pythonpath = ["./src"]
addopts = "-p no:warnings"

[tool.taskipy.tasks]
lint = 'ruff check . && blue --check . --diff'
format = 'blue .  && isort .'
run = 'uvicorn src.main:app --reload'
pre_test = 'task lint'
test = 'pytest -s -x --cov=app -vv'
post_test = 'coverage html'
export_libs = 'uv export --format requirements-txt'
